--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Ensure .nojekyll exists
+        run: |
+          touch docs/.nojekyll
+          touch .nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
