--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "marked": "^9.1.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
